# dpt_builder_suite

./: .bzrignore  .gitignore  LICENSE  MANIFEST.in  README  build.xml  build_requirements.txt  builder_skel.py  js_builder.py  optional_requirements.txt  php_builder.php  py_builder.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: on-push-pre-release.yml  on-push-test.yml  on-release-publish.yml
_developer/: pylint.ini  pylint_strict.ini
_developer/sphinx.py/: builder_skel.rst  conf.py  index.rst  js_builder.rst  py_builder.rst
_developer/sphinx.py/_dummy_src/: builder_skel.py  file.py  rcssmin.py  scss.py
_developer/sphinx.py/modules/: dNG.distutils.builder_skel.BuilderSkel.rst  dNG.distutils.css_builder.CssBuilder.rst  dNG.distutils.js_builder.JsBuilder.rst  dNG.distutils.py_builder.PyBuilder.rst
builder.css/: .gitignore  LICENSE  README  build.xml
builder.css/_developer/sphinx.py/: conf.py  css_builder.rst
builder.css/src/: css_builder.py  make.py
builder.js/: .gitignore  LICENSE
builder.js/_developer/: pylint_strict.ini
builder.js/_developer/sphinx.py/: conf.py  js_builder.rst
builder.js/src/: js_builder.py  make.py
builder.py/: README  build.xml
builder.py/_developer/: pylint.ini
builder.py/_developer/sphinx.py/: conf.py  index.rst  (+1 more)
builder.py/src/: py_builder.py
scripts/: .gitignore  js_builder.py  make.py  py_builder.py
src/: .gitignore  builder_skel.py  css_builder.py  js_builder.py  make.py  make_css.py  make_js.py  make_py.py  py_builder.py
src/dpt_builder_suite/: builder_skel.py  copy_builder.py  py_builder.py
(+22 files in other folders)
