[metadata]
name = dpt-builder-suite
description = Build code for different release targets
long_description = The builder suite provides support to rewrite placeholders for debug log messages, removing development notes and adding source code conditionally.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = MPL2
url = https://www.direct-netware.de/redirect?dpt;builder_suite
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
